[gd_scene load_steps=21 format=3 uid="uid://cnau3xvg64qd7"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_b21x8"]
[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="2_f3hho"]
[ext_resource type="Resource" uid="uid://53mjo0ws8c1i" path="res://Data/Weapons/Bow.tres" id="2_ids7m"]
[ext_resource type="PackedScene" uid="uid://c1yakuev2ov6r" path="res://Scenes/enemy_bullet_Arrow.tscn" id="3_1f2lq"]
[ext_resource type="Script" path="res://Scripts/EnemyIdle.gd" id="4_scs68"]
[ext_resource type="Texture2D" uid="uid://g2ynxnu5x1j0" path="res://Assets/Rifle.png" id="4_sxo84"]
[ext_resource type="Texture2D" uid="uid://b5fqf13g3figs" path="res://Assets/SBID.png" id="4_yxisj"]
[ext_resource type="Script" path="res://Scripts/EnemyFollow.gd" id="5_gcvdk"]
[ext_resource type="Script" path="res://Scripts/EnemyAim.gd" id="6_oq770"]

[sub_resource type="AtlasTexture" id="AtlasTexture_88pwh"]
atlas = ExtResource("4_yxisj")
region = Rect2(0, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bu16"]
atlas = ExtResource("4_yxisj")
region = Rect2(21, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcwj0"]
atlas = ExtResource("4_yxisj")
region = Rect2(0, 21, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0o2c"]
atlas = ExtResource("4_yxisj")
region = Rect2(21, 21, 21, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_obxg0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88pwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bu16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcwj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0o2c")
}],
"loop": true,
"name": &"FrontIdle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0gh5k"]
radius = 11.3

[sub_resource type="Animation" id="Animation_hspgu"]
resource_name = "DAMAGE"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.755405, 0, 0.302762, 1), Color(1, 1, 1, 1), Color(0.764706, 0, 0.219608, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bimy1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x0kkx"]
_data = {
"DAMAGE": SubResource("Animation_hspgu"),
"RESET": SubResource("Animation_bimy1")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4etn"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4wwec"]
bg_color = Color(0.697715, 0.210985, 0.118182, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(2, 2)
motion_mode = 1
script = ExtResource("1_b21x8")
range = 200.0
weapon_equipped = ExtResource("2_ids7m")
bullet_type = ExtResource("3_1f2lq")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
texture_filter = 1
position = Vector2(-1, -12)
sprite_frames = SubResource("SpriteFrames_obxg0")
animation = &"FrontIdle"
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.16, -8.67)
shape = SubResource("CircleShape2D_0gh5k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x0kkx")
}

[node name="WeaponPivot" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="GunSprite" type="Sprite2D" parent="WeaponPivot"]
z_index = 2
texture_filter = 1
position = Vector2(6.66, 0.465)
scale = Vector2(0.35, 0.35)
texture = ExtResource("4_sxo84")
offset = Vector2(13.73, -17.26)

[node name="EndOfGun" type="Node2D" parent="WeaponPivot/GunSprite"]
position = Vector2(24.75, -11.3)
scale = Vector2(3.33333, 3.33333)

[node name="GunDirection" type="Node2D" parent="WeaponPivot/GunSprite"]
position = Vector2(28.911, -11.3)
scale = Vector2(3.33333, 3.33333)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_f3hho")
initial_state = NodePath("EnemyIdle")

[node name="EnemyIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_scs68")
enemy = NodePath("../..")

[node name="EnemyFollow" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_gcvdk")
enemy = NodePath("../..")

[node name="EnemyAim" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_oq770")
enemy = NodePath("../..")

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -37.0

[node name="ProgressBar" type="ProgressBar" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = 7.5
offset_right = 8.0
offset_bottom = 8.9
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_g4etn")
theme_override_styles/fill = SubResource("StyleBoxFlat_4wwec")
max_value = 3.0
value = 3.0
show_percentage = false

[connection signal="timeout" from="WaitTimer" to="StateMachine/EnemyIdle" method="_on_wait_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="StateMachine/EnemyAim" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="StateMachine/EnemyAim" method="_on_reload_timer_timeout"]
